--- a/pages/pasteleria.html
+++ b/pages/pasteleria.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="../images/favicon.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
 
@@ -20,30 +21,38 @@
     <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="container border-bottom">
-        <button class="nav--toggle">
-            <i class="header__icono fa-solid fa-bars"></i>
-        </button>
-        <nav class="nav">
-            <ul class="nav__lista">
-                <li class="nav__item">
-                    <a class="navcolor" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./panificados.html">Panificados</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./pasteleria.html">Pasteleria</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./contacto.html">Contacto</a>
-                </li>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Inicio</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-mdb-toggle="collapse"
+            data-mdb-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/pages/panificados.html">Panificados</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/pasteleria.html">Pasteleria</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+              </li>
             </ul>
-        </nav>
-    </header>
+          </div>
+        </div>
+      </nav>
 
     <main class="fondo-1">
         <div>
@@ -57,39 +66,39 @@
 
         <section class="galeria">
             <div class="galeria__item--1 grid__titulo-1 animaciones">
-                <img src="../images/cañonsitos1.jpg" alt="ele1">
+                <img src="../images/cañonsitos1.jpg" alt="cañonsitos" class="galeria__img">
                 <h2 class="galeria__titulo">Cañoncitos</h2>
             </div>
             <div class="galeria__item--2 grid__titulo-1 animaciones">
-                <img src="../images/lemon-pie.jpg" alt="ele2">
+                <img src="../images/lemon-pie.jpg" alt="lemon pie" class="galeria__img">
                 <h2 class="galeria__titulo">Lemon Pie</h2>
             </div>
             <div class="galeria__item--3 grid__titulo-1 animaciones">
-                <img src="../images/masas-finas.jpg" alt="ele3">
+                <img src="../images/masas-finas.jpg" alt="masas finas" class="galeria__img">
                 <h2 class="galeria__titulo">Masas Finas</h2>
             </div>
             <div class="galeria__item--4 grid__titulo-1 animaciones">
-                <img src="../images/medialunas.jpg" alt="ele4">
+                <img src="../images/medialunas.jpg" alt="medialunas" class="galeria__img">
                 <h2 class="galeria__titulo">Medialunas</h2>
             </div>
             <div class="galeria__item--5 grid__titulo-1 animaciones">
-                <img src="../images/mil-hojas.jpg" alt="ele5">
+                <img src="../images/mil-hojas.jpg" alt="mil hojas" class="galeria__img">
                 <h2 class="galeria__titulo">Mil Hojas</h2>
             </div>
             <div class="galeria__item--6 grid__titulo-1 animaciones">
-                <img src="../images/palmeritas.jpg" alt="ele6">
+                <img src="../images/palmeritas.jpg" alt="palmeritas" class="galeria__img">
                 <h2 class="galeria__titulo">Palmeritas</h2>
             </div>
             <div class="galeria__item--7 grid__titulo-1 animaciones">
-                <img src="../images/pastafrola.jpg" alt="ele7">
+                <img src="../images/pastafrola.jpg" alt="pastafrola" class="galeria__img">
                 <h2 class="galeria__titulo">Pastafrola</h2>
             </div>
             <div class="galeria__item--8 grid__titulo-1 animaciones">
-                <img src="../images/tarta-coco.jpg" alt="ele8">
+                <img src="../images/tarta-coco.jpg" alt="tarta de coco" class="galeria__img">
                 <h2 class="galeria__titulo">Tarta de Coco</h2>
             </div>
             <div class="galeria__item--9 grid__titulo-1 animaciones">
-                <img src="../images/pañuelitos1.jpg" alt="ele9">
+                <img src="../images/pañuelitos1.jpg" alt="pañuelitos" class="galeria__img">
                 <h2 class="galeria__titulo">Pañuelitos</h2>
             </div>
         </section>
