--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="../images/favicon.png">
 
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../Js/bootstrap.bundle.min.js"></script>
@@ -21,89 +22,93 @@
 
 <body>
 
-    <header class="container border-bottom">
-        <button class="nav--toggle">
-            <i class="header__icono fa-solid fa-bars"></i>
-        </button>
-        <nav class="nav">
-            <ul class="nav__lista">
-                <li class="nav__item">
-                    <a class="navcolor" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./panificados.html">Panificados</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./pasteleria.html">Pasteleria</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">Inicio</a>
+            <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/pages/panificados.html">Panificados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/pages/pasteleria.html">Pasteleria</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
     <div class="subtitulo">
-        <h2 class="titulo">Contactanos</h2>
+        <h1 class="titulo">Contactanos</h1>
     </div>
+    <main>
+        <section class="container">
+            <div class="row">
+                <form class="col-lg-6 col-md-6 col-xs-12 " action="">
 
-    <section class="container pb-5">
-        <div class="row">
-            <form class="col-lg-6 col-md-6 col-xs-12" action="">
-
-                <div>
-                    <input class="form-control mb-2" type="text" name="nombre" placeholder="ingrese su nombre..">
-                </div>
-
-                <div>
-                    <input class="form-control mb-2" type="text" name="apellido" placeholder="ingrese su apellido..">
-                </div>
-
-                <div>
-                    <input class="form-control mb-2" type="text" name="cel" placeholder="ingrese su telefono..">
-                </div>
-
-                <div>
-                    <input class="form-control mb-3" type="text" id="mail" name="mail" placeholder="ingrese su Email..">
-                </div>
-
-                <div>
-                    <label for="tipo">
-                        <p class="navcolor">Tipo de Mensaje:</p>
-                    </label>
-                    <select class="mb-3" name="tipo" id="tipo">
-                        <option value="consulta">consulta</option>
-                        <option value="sugerencia">sugerencia</option>
-                        <option value="comprar">comprar</option>
-                        <option value="presupuesto">presupuesto</option>
-                    </select>
-                </div>
-                <div>
                     <div>
-                        <textarea class="form-control mb-2" rows="5" placeholder="mensaje"></textarea>
+                        <input class="form-control mb-2" type="text" required name="nombre" placeholder="ingrese su nombre..">
                     </div>
 
                     <div>
-                        <button class="btn btn-primary" type="submit">Enviar</button>
-                        <button class="btn btn-primary" type="reset">Limpiar</button>
+                        <input class="form-control mb-2" type="text" required name="apellido"
+                            placeholder="ingrese su apellido..">
                     </div>
+
+                    <div>
+                        <input class="form-control mb-2" type="text" required name="cel" placeholder="ingrese su telefono..">
+                    </div>
+
+                    <div>
+                        <input class="form-control mb-3" type="text" required id="mail" name="mail"
+                            placeholder="ingrese su Email..">
+                    </div>
+
+                    <div>
+                        <label for="tipo">
+                            <p class="msj">Tipo de Mensaje:</p>
+                        </label>
+                        <select class="mb-3" name="tipo" id="tipo">
+                            <option value="consulta">consulta</option>
+                            <option value="sugerencia">sugerencia</option>
+                            <option value="comprar">comprar</option>
+                            <option value="presupuesto">presupuesto</option>
+                        </select>
+                    </div>
+                    <div>
+                        <div>
+                            <textarea class="form-control mb-2" rows="5" placeholder="mensaje"></textarea>
+                        </div>
+
+                        <div>
+                            <button class="btn botones" type="submit">Enviar</button>
+                            <button class="btn botones" type="reset">Limpiar</button>
+                        </div>
+                    </div>
+                </form>
+
+
+                <div class="col-lg-6 col-md-6 col-xs-12">
+                    <iframe class="mt-4 mb-4"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924.2385052788201!2d-62.69515950154649!3d-38.825299080389776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2ba3b6278e07e4!2spanaderia%20paz!5e0!3m2!1ses-419!2sar!4v1649226546920!5m2!1ses-419!2sar"
+                        width="100%" height="80%" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
-            </form>
-
-
-            <div class="col-lg-6 col-md-6 col-xs-12">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924.2385052788201!2d-62.69515950154649!3d-38.825299080389776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2ba3b6278e07e4!2spanaderia%20paz!5e0!3m2!1ses-419!2sar!4v1649226546920!5m2!1ses-419!2sar"
-                    width="=100%" height="80%" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
 
     <footer class="bg-dark text-center text-white">
