--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,101 +1,105 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="panaderia, panificados, pasteleria">
-    <meta name="description" content="Descubri todo en panificacion y pasteleria">
-    <title>Nuestra historia</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap" rel="stylesheet"> 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="panaderia, panificados, pasteleria">
+  <meta name="description" content="Descubri todo en panificacion y pasteleria">
+  <title>Nuestra historia</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Dela+Gothic+One&display=swap"
+    rel="stylesheet">
+  <link rel="shortcut icon" href="../images/favicon.png">
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <script src="../Js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <script src="../Js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../css/style.css">
+  <script src="https://kit.fontawesome.com/b45e073eae.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <header class="container border-bottom">
-            <button class="nav--toggle">
-            <i class="header__icono fa-solid fa-bars"></i>
-            </button>
-        <nav class="nav">
-            <ul class="nav__lista">
-                <li class="nav__item">
-                    <a class="navcolor" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./panificados.html">Panificados</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./pasteleria.html">Pasteleria</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav__item">
-                    <a class="navcolor" href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">Inicio</a>
+      <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/pages/panificados.html">Panificados</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/pasteleria.html">Pasteleria</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <main class="grid__nosotros">
-        <div class="nosotros__1">
-            <div>
-                <h3 class="subtitulo">Nosotros:</h3>
-            </div>
-            <div>
-                <p class="parrafo">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur eius,
-                    sapiente provident reiciendis soluta labore accusamus temporibus dicta non dignissimos!
-                </p>
-            </div>
-        </div>
-        <div class="nosotros__2">
-            <div>
-            <h3 class="subtitulo">Historia:</h3>
-            </div>
-            <div>
-                <p class="parrafo">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis sit ducimus sunt nam,
-                     repudiandae iste doloremque vero sed similique rerum.
-                </p>
-            </div>
-        </div>
+  <main class="grid__nosotros">
+    <div class="nosotros__1">
+      <div>
+        <h2 class="subtitulo">Nosotros:</h2>
+      </div>
+      <div>
+        <p class="parrafo">
+          Hola! Somos de Medanos; Provincia Buenos Aires; partido de Villarino.
+          Nosotros empezamos un 18 de abril del 2021 y desde ése día que hacemos con pasión cada producto para que nuestros clientes obtengan la mayor satisfacción porque todo lo que hacemos, lo hacemos con amor.
+        </p>
+      </div>
+    </div>
+    <div class="nosotros__2">
+      <div>
+        <h2 class="subtitulo">Historia:</h2>
+      </div>
+      <div>
+        <p class="parrafo">
+         Somos dos familias de panaderos provenientes de la ciudad de Bahia Blanca.
+          Actualmente radicado en Medanos con sucursal en una de las esquinas mas conocidas del pueblo.
+        </p>
+      </div>
+    </div>
 
-        <div class="nosotros__3">
-            <img src="../images/mostrador.jpg" alt="ele3" class="nosotros__img">
-        </div>
-            
+    <div class="nosotros__3">
+      <img src="../images/mostrador.jpg" alt="ele3" class="nosotros__img">
+    </div>
 
-    </main>
 
-    <footer class="bg-dark text-center text-white">
-        <div class="container p-4 pb-0">
+  </main>
 
-            <section class="mb-4">
+  <footer class="bg-dark text-center text-white">
+    <div class="container p-4 pb-0">
 
-                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/enMedanos" role="button"><i
-                        class="fab fa-facebook-f"></i></a>
+      <section class="mb-4">
 
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="fab fa-instagram"></i></a>
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/enMedanos" role="button"><i
+            class="fab fa-facebook-f"></i></a>
 
-                        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                            class="fab fa-whatsapp"></i></a>
-            </section>
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
 
-        </div>
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2022 Copyright: Panaderia Paz
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-whatsapp"></i></a>
+      </section>
 
-        </div>
+    </div>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright: Panaderia Paz
 
-    </footer>
-    
+    </div>
+
+  </footer>
+
 </body>
+
 </html>
