--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -32,16 +32,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/pages/panificados.html">Panificados</a>
+            <a class="nav-link" aria-current="page" href="./panificados.html">Panificados</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/pages/pasteleria.html">Pasteleria</a>
+            <a class="nav-link" href="./pasteleria.html">Pasteleria</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+            <a class="nav-link" href="./nosotros.html">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+            <a class="nav-link" href="./contacto.html">Contacto</a>
           </li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
         <h2 class="subtitulo">Nosotros:</h2>
       </div>
       <div>
-        <p class="parrafo">
+        <p class="nosotros-parrafo">
           Hola! Somos de Medanos; Provincia Buenos Aires; partido de Villarino.
           Nosotros empezamos un 18 de abril del 2021 y desde ése día que hacemos con pasión cada producto para que nuestros clientes obtengan la mayor satisfacción porque todo lo que hacemos, lo hacemos con amor.
         </p>
@@ -65,7 +65,7 @@
         <h2 class="subtitulo">Historia:</h2>
       </div>
       <div>
-        <p class="parrafo">
+        <p class="nosotros-parrafo">
          Somos dos familias de panaderos provenientes de la ciudad de Bahia Blanca.
           Actualmente radicado en Medanos con sucursal en una de las esquinas mas conocidas del pueblo.
         </p>
