--- a/pages/pasteleria.html
+++ b/pages/pasteleria.html
@@ -38,16 +38,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/pages/panificados.html">Panificados</a>
+                <a class="nav-link" aria-current="page" href="./panificados.html">Panificados</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/pasteleria.html">Pasteleria</a>
+                <a class="nav-link" href="./pasteleria.html">Pasteleria</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                <a class="nav-link" href="./contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
